kubernetes/apps/default/ganymede/base/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ganymede-api
  labels:
    app: ganymede-api
    deployment: ganymede-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ganymede-api
      deployment: ganymede-api
  template:
    metadata:
      labels:
        app: ganymede-api
        deployment: ganymede-api
    spec:
      containers:
        - name: ganymede-api
          image: ghcr.io/zibbp/ganymede:main@sha256:f4080f5fbb84cb0bf56f2c4017b2839b668e21eb0075f43c7aa0ab38458a9e5d
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: data
              mountPath: /data
            - name: logs
              mountPath: /logs
            - name: videos-nfs
              mountPath: /vods
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ganymede-data-pvc
        - name: logs
          persistentVolumeClaim:
            claimName: ganymede-logs-pvc
        - name: videos-nfs
          persistentVolumeClaim:
            claimName: ganymede-videos-nfs-pv
