kubernetes/apps/default/ganymede/base/api/service.yml
apiVersion: v1beta1
kind: Service
metadata:
  name: ganymede-api-service
spec:
  selector:
    matchFields:
      - metadata.name: ganymede-api-deployment
  ports:
    - name: ganymede-api-http
      port: 4000
      targetPort: 4000
      protocol: TCP
  type: ClusterIP
