kubernetes/apps/default/ganymede/base/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ganymede-api-ingress
  labels:
    app: ganymede-api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api-ganymede.lab.zibbp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ganymede-api
                port:
                  number: 4000
  tls:
    - hosts:
        - api-ganymede.lab.zibbp.net
      secretName: lab-zibbp-net-tls
